add read only `newByteChannel` test file reading using Files